new file:   dashboard.html 	new file:   gened-50.html 	modified:   gened-free-questions.html 	new file:   gened-menu.html 	modified:   index.html 	renamed:    js/test.js -> js/gened-50.js 	modified:   js/gened-free-questions.js 	new file:   styles/gened-menu.css

--- a/dashboard.html
+++ b/dashboard.html
@@ -29,10 +29,7 @@
           <a class="nav-link active fs-5 text-light-emphasis ms-2 me-2" aria-current="page" href="#">FAQ's</a>
         </li>
       </ul>
-      <a href="#" class="text-decoration-none"><span class="me-3 fs-5">Log-in</span></a>
-      <form class="d-flex" role="search">
-      <button class="btn bg-success text-white shadow mt-2" type="button" data-bs-toggle="modal" data-bs-target="#upgradeModal">Go Premium</button> 
-      </form>
+      <span class="fw-bold fs-6">Welcome User!</span>
     </div>
   </div>
 </nav>
@@ -42,29 +39,12 @@
 
 <div id="menu-container" class="menu-container m-0 p-0 mt-5 row">
 
-      <div class="buttons d-flex justify-content-center col-lg-4 col-md-6 m-0 p-0">
-        <a href="gened-free-questions.html">
-        <button  class="button-select  shadow-lg">
-        <span class="fs-6 fw-bold">FREE Gen Ed Test Drill</span><br>
-        <span class="text-muted">(50-item Drill)</span>
-        </button>
-        </a>
-      </div>
 
       <div class="buttons d-flex justify-content-center col-lg-4 col-md-6 m-0 p-0">
-          <a href="gened-free-questions.html">
-          <button  class="button-select  shadow-lg">
-          <span class="fs-6 fw-bold">FREE Prof Ed Test Drill</span><br>
-          <span class="text-muted">(50-item Drill)</span>
-          </button>
-          </a>
-      </div>
-
-      <div class="buttons d-flex justify-content-center col-lg-4 col-md-6 m-0 p-0">
-        <a data-bs-toggle="modal" data-bs-target="#upgradeModal" href="#">
+        <a href="gened-menu.html">
         <button  class="button-select  shadow-lg">
         <span class="fs-6 fw-bold">Gen Ed Test Drill</span><br>
-        <span class="text-muted">(Premium - Unlock More Questions)</span>
+        <span class="text-muted">(More Questions)</span>
         </button>
         </a>
       </div> 
