--- a/gened-50.html
+++ b/gened-50.html
@@ -29,9 +29,6 @@
           <a class="nav-link active fs-5 text-light-emphasis ms-2 me-2" aria-current="page" href="#">FAQ's</a>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-      <button class="btn bg-success text-white shadow" type="button" data-bs-toggle="modal" data-bs-target="#upgradeModal">Go Premium</button> 
-      </form>
     </div>
   </div>
 </nav>
@@ -72,7 +69,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        Coming Soon
+        <h5 class="text-success"> Your account is already upgraded! </h5>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -81,24 +78,7 @@
   </div>
 </div>
 
-
-<div class="modal fade" id="showAnswerKeyUpgradeModal" tabindex="-1" aria-labelledby="showAnswerKeyUpgradeModal" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Upgrade</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <span class="text-danger fw-bold">This is a premium feature. Please updrade to show Answer Key.</span>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
-<script src="./js/gened-free-questions.js"></script>
+<script src="./js/gened-50.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
